feat: Code cleanup
Remove deprecated `CreateLogs` class and simplify codebase.

Refactored multiple classes to remove redundant code, improve readability, and enhance maintainability. Fixed various minor issues, optimized loops, and replaced deprecated logic with modern practices.

Signed-off-by: Jorgesu040 <jorgesu040@gmail.com>